fix z-index

--- a/src/css/components/floating_button.component.pcss
+++ b/src/css/components/floating_button.component.pcss
@@ -1,5 +1,6 @@
 .ab-fb-top-right, .ab-fb-top-left, .ab-fb-bottom-right, .ab-fb-bottom-left {
     position: fixed;
+    z-index: 2140000000;
 
     &:hover {
         cursor: pointer;
